added color to the list items

--- a/profile.css
+++ b/profile.css
@@ -29,8 +29,8 @@ ul{
    
 }
 .list{
-      
-font-family: 'Trirong', serif;
+    color:pink;  
+    font-family: 'Trirong', serif;
 }
 .friends{
     background-color: lemonchiffon;
